--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,7 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python
+
+## Repo specific
+data/count_data.csv
+data/raw_data.csv
